// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly with empty props 1`] = `
<div
  aria-hidden="true"
  className="listItemAvatar"
>
  <div
    className="avatar small avatar"
    data-testid="avatar"
    data-vibe="Avatar"
    style={{}}
  >
    <div
      aria-hidden={false}
      className="circle circleImg"
      style={
        {
          "backgroundColor": "var(--color-chili-blue)",
        }
      }
      tabIndex={-1}
    >
      <img
        className="contentImg contentImgSmall"
        data-testid="avatar-content"
      />
    </div>
  </div>
</div>
`;

exports[`renders correctly with picture 1`] = `
<div
  aria-hidden="true"
  className="listItemAvatar"
>
  <div
    className="avatar small avatar"
    data-testid="avatar"
    data-vibe="Avatar"
    style={{}}
  >
    <div
      aria-hidden={false}
      className="circle circleImg"
      style={{}}
      tabIndex={-1}
    >
      <img
        className="contentImg contentImgSmall"
        data-testid="avatar-content"
        src="image-url.jpg"
      />
    </div>
  </div>
</div>
`;
